--- a/MaRTA/makefile
+++ b/MaRTA/makefile
@@ -1,11 +1,12 @@
 NAME=MaRTA
-LIBS= -lcommons 
+LIBS= -lcommons
 MODS=-Wall -MMD -MP
 CC=gcc
 MV=mv -f
 RM=rm -rf
 GO=./$(NAME).o config.cfg
 SRCS=$(shell find ./ -iname *.c)
+UTILS=$(shell find ../utils/ -iname *.c)
 
 all: clean dependents build
 debug: CC += -DDEBUG -g -O0
@@ -15,7 +16,7 @@ clean:
 dependents:
 
 build:
-	$(CC) $(MODS) -o $(NAME).o $(SRCS) $(LIBS)
+	$(CC) $(MODS) -o $(NAME).o $(SRCS) $(UTILS) $(LIBS)
 go:
 	$(GO)
 val:
