--- a/MaRTATestClient/.project
+++ b/MaRTATestClient/.project
@@ -3,6 +3,7 @@
 	<name>MaRTATestClient</name>
 	<comment></comment>
 	<projects>
+		<project>utils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
