--- a/Nodoold/makefile
+++ b/Nodoold/makefile
@@ -6,6 +6,7 @@ MV=mv -f
 RM=rm -rf
 GO=./$(NAME).o config.cfg
 SRCS=$(shell find ./ -iname *.c)
+UTILS=$(shell find ../utils/ -iname *.c)
 
 all: clean dependents build
 debug: CC += -DDEBUG -g -O0
@@ -15,7 +16,7 @@ clean:
 dependents:
 
 build:
-	$(CC) $(MODS) -o $(NAME).o $(SRCS) $(LIBS)
+	$(CC) $(MODS) -o $(NAME).o $(SRCS) $(UTILS) $(LIBS)
 go:
 	$(GO)
 val:
