--- a/Nodo/config.cfg
+++ b/Nodo/config.cfg
@@ -1,7 +1,7 @@
-IP_FS = 127.0.0.1
-PUERTO_FS = 5000
-IP_NODO = 127.0.0.1
-PUERTO_NODO = 5001
-ARCHIVO_BIN = /home/utnso/Sachida/tp-2015-1c-sachida/Nodo/src/archivo_mmap.txt
-DIR_TMP = ./tmp
-NODO_NUEVO  = SI
+IP_FS=127.0.0.1
+PUERTO_FS=5000
+IP_NODO=127.0.0.1
+PUERTO_NODO=5001
+ARCHIVO_BIN=/home/utnso/Sachida/tp-2015-1c-sachida/Nodo/src/archivo_mmap.txt
+DIR_TMP=./tmp
+NODO_NUEVO=SI
