--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -1,6 +1,6 @@
 PUERTO_MARTA=30000
 IP_MARTA=127.0.0.1
-MAPPER=/home/utnso/workspace/Nodo/tmp /homes/lalalalalalalalalalaa /home/utn/lala/kasdjq/oqowe
+MAPPER=/home/utnso/tp-2015-1c-sachida/Job/TestMap.txt
 REDUCER=/home/utnso/workspace/Nodo/tmp
 RESULTADO=/home/utnso/workspace/Nodo/nodo.bin
 COMBINER=false
