--- a/Nodo/config.cfg
+++ b/Nodo/config.cfg
@@ -1,9 +1,8 @@
-IP_FS=127.0.0.1
-PUERTO_FS=5000
-IP_JOB=127.0.0.1
-PUERTO_JOB=5002
-IP_NODO=127.0.0.1
-PUERTO_NODO=5001
-ARCHIVO_BIN=/home/utnso/Sachida/tp-2015-1c-sachida/Nodo/src/archivo_mmap.txt
-NODO_NUEVO=0
-DIR_TMP=./tmp
+FS_IP=127.0.0.1
+FS_PORT=5000
+LISTEN_PORT=5001
+BIN_FILE_PATH=data.bin
+NEW_NODE=0
+BLOCKS_COUNT=50
+NAME=Nodo1
+TMP_DIR=/tmp
