remake job + test routine

--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -1,7 +1,7 @@
 PUERTO_MARTA=30000
 IP_MARTA=127.0.0.1
-MAPPER=/home/utnso/tp-2015-1c-sachida/Job/TestMap.txt
-REDUCER=/home/utnso/workspace/Nodo/tmp
+MAPPER=src/weather/mapper.sh
+REDUCER=src/weather/reduce.pl
 RESULTADO=/home/utnso/workspace/Nodo/nodo.bin
 COMBINER=false
 LIST_ARCHIVOS=/home/utnso/workspace/Nodo/tmp /homes/lalalalalalalalalalaa /home/utn/lala/kasdjq/oqowe
