MaRTA really get blocks from fs

--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -4,4 +4,4 @@ MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
 RESULTADO=/home/utnso/workspace/Nodo/nodo.bin
 COMBINER=false
-LIST_ARCHIVOS=/archivo
+LIST_ARCHIVOS=./archivo
