Fix job config combiner + minor fixes

--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -3,5 +3,5 @@ IP_MARTA=127.0.0.1
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
 RESULTADO=/home/utnso/workspace/Nodo/nodo.bin
-COMBINER=false
+COMBINER=0
 LIST_ARCHIVOS=./archivo
