--- a/Nodo/config.cfg
+++ b/Nodo/config.cfg
@@ -3,6 +3,6 @@ FS_PORT=5000
 LISTEN_PORT=5001
 BIN_FILE_PATH=data.bin
 NEW_NODE=0
-BLOCKS_COUNT=11
+BLOCKS_COUNT=1
 NAME=Nodo1
-TMP_DIR=/tmp
+TMP_DIR=/home/utnso/tmp
