Map - Reduce OK

--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -1,7 +1,7 @@
 PUERTO_MARTA=30000
-IP_MARTA=127.0.0.1
+IP_MARTA=192.168.100.125
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
-RESULTADO=/home/utnso/workspace/Nodo/nodo.bin
+RESULTADO=/algo
 COMBINER=1
-LIST_ARCHIVOS=./archivo
+LIST_ARCHIVOS=/test1
