--- a/Nodo/config.cfg
+++ b/Nodo/config.cfg
@@ -1,8 +1,8 @@
 FS_IP=127.0.0.1
 FS_PORT=5000
-LISTEN_PORT=5001
+LISTEN_PORT=4999
 BIN_FILE_PATH=data.bin
 NEW_NODE=0
 BLOCKS_COUNT=10
-NAME=Nodo1
+NAME=Nodo
 TMP_DIR=/home/utnso/tmp
