--- a/Nodo/makefile
+++ b/Nodo/makefile
@@ -4,9 +4,19 @@ MODS=-Wall -MMD -MP
 CC=gcc -g
 MV=mv -f
 RM=rm -rf
-GO=./$(NAME).o config.cfg
+CFG_FILE=config.cfg
+GO=./$(NAME).o $(CFG_FILE)
 SRCS=$(shell find ./ -iname *.c)
 
+
+
+
+goi: CFG_FILE=config${i}.cfg
+goi: go
+vali: CFG_FILE=config${i}.cfg
+vali: val
+
+	
 all: clean dependents build
 debug: CC += -DDEBUG -g -O0
 debug: all
