--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -2,6 +2,6 @@ PUERTO_MARTA=30000
 IP_MARTA=192.168.100.125
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
-RESULTADO=/algo
+RESULTADO=/resultado
 COMBINER=1
 LIST_ARCHIVOS=/test1
