--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -1,7 +1,7 @@
 PUERTO_MARTA=30000
-IP_MARTA=192.168.100.125
+IP_MARTA=127.0.0.1
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
 RESULTADO=/algo
 COMBINER=1
-LIST_ARCHIVOS=/test1
+LIST_ARCHIVOS=/archivo
