--- a/Nodo/makefile
+++ b/Nodo/makefile
@@ -1,6 +1,6 @@
 NAME=Nodo
 LIBS= -lcommons -lpthread
-MODS=-Wall -MMD -MP
+MODS=-Wall -MMD -MP -D_FILE_OFFSET_BITS=64
 CC=gcc -g
 MV=mv -f
 RM=rm -rf
@@ -8,14 +8,10 @@ CFG_FILE=config.cfg
 GO=./$(NAME).o $(CFG_FILE)
 SRCS=$(shell find ./ -iname *.c)
 
-
-
-
 goi: CFG_FILE=config${i}.cfg
 goi: go
 vali: CFG_FILE=config${i}.cfg
 vali: val
-
 	
 all: clean dependents build
 debug: CC += -DDEBUG -g -O0
