--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -1,7 +1,7 @@
 PUERTO_MARTA=30000
-IP_MARTA=127.0.0.1
+IP_MARTA=192.168.1.108
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
-RESULTADO=/resultado
+RESULTADO=a
 COMBINER=1
-LIST_ARCHIVOS=/archivo
+LIST_ARCHIVOS=/mr/weather/201301partial.txt
