--- a/Job/config.cfg
+++ b/Job/config.cfg
@@ -3,5 +3,5 @@ IP_MARTA=192.168.1.108
 MAPPER=src/weather/mapper.sh
 REDUCER=src/weather/reduce.pl
 RESULTADO=a
-COMBINER=1
-LIST_ARCHIVOS=/mr/weather/201301partial.txt
+COMBINER=0
+LIST_ARCHIVOS=/mr/weather/201301hourly.txt /mr/weather/201302hourly.txt
