--- a/Job/config1.cfg
+++ b/Job/config1.cfg
@@ -1,7 +1,7 @@
 PUERTO_MARTA=30000
 IP_MARTA=192.168.1.108
-MAPPER=weather/mapper.sh
-REDUCER=weather/reduce.pl
+MAPPER=scripts/weather/mapper.sh
+REDUCER=scripts/weather/reduce.pl
 RESULTADO=/output/job1/max-temps.txt
 COMBINER=1
 LIST_ARCHIVOS=/mr/weather/201301hourly.txt /mr/weather/201302hourly.txt /mr/weather/201303hourly.txt /mr/weather/201304hourly.txt
