fix nodes configs

--- a/Nodo/config1.cfg
+++ b/Nodo/config1.cfg
@@ -3,6 +3,6 @@ FS_PORT=5000
 LISTEN_PORT=5001
 BIN_FILE_PATH=data1.bin
 NEW_NODE=0
-BLOCKS_COUNT=101
+BLOCKS_COUNT=90
 NAME=Nodo1
-TMP_DIR=/home/utnso/tmp
+TMP_DIR=/tmp
