--- a/Nodo/config2.cfg
+++ b/Nodo/config2.cfg
@@ -3,6 +3,6 @@ FS_PORT=5000
 LISTEN_PORT=5002
 BIN_FILE_PATH=data2.bin
 NEW_NODE=0
-BLOCKS_COUNT=43
+BLOCKS_COUNT=80
 NAME=Nodo2
-TMP_DIR=/home/utnso/tmp
+TMP_DIR=/tmp
