--- a/Nodo/config3.cfg
+++ b/Nodo/config3.cfg
@@ -3,6 +3,6 @@ FS_PORT=5000
 LISTEN_PORT=5003
 BIN_FILE_PATH=data3.bin
 NEW_NODE=0
-BLOCKS_COUNT=80
+BLOCKS_COUNT=85
 NAME=Nodo3
-TMP_DIR=/home/utnso/tmp
+TMP_DIR=/tmp
