--- a/Nodo/config4.cfg
+++ b/Nodo/config4.cfg
@@ -3,6 +3,6 @@ FS_PORT=5000
 LISTEN_PORT=5004
 BIN_FILE_PATH=data4.bin
 NEW_NODE=0
-BLOCKS_COUNT=80
+BLOCKS_COUNT=85
 NAME=Nodo4
-TMP_DIR=/home/utnso/tmp
+TMP_DIR=/tmp
